# jointris

./: CHANGES  INSTALL  README.md
jointris/: .gitignore  CMakeLists.txt  INSTALL  NEWS  README.md  jointris-defs.cmake
jointris/data/applications/: com.efanomars.jointris.desktop
jointris/data/games/jointris/: classic.xml  classic2.xml  classic300.xml  classicVs.xml  classicVsJunk.xml  dummy.xml  largo.xml  penta.xml  permutis.xml  phantom.xml
jointris/scripts/: install_jointris.py  uninstall_jointris.py
jointris/src/: binconfig.h  main.cc  setup.cc  setup.h  setupstdconfig.cc  setupstdconfig.h  setupxmlgameloader.cc  setupxmlgameloader.h  setupxmlthemeloader.cc  setupxmlthemeloader.h
jointris/test/: CMakeLists.txt  testLoadGames.cxx
libstmm-jointris/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-jointris-defs.cmake  stmm-jointris.pc.in
libstmm-jointris-xml/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-jointris-xml-defs.cmake  stmm-jointris-xml.pc.in
libstmm-jointris-xml/data/themes/jointris/simple_j.thm/: theme.xml
libstmm-jointris-xml/doc/: CMakeLists.txt
libstmm-jointris-xml/include/stmm-jointris-xml/: stmm-jointris-xml-config.h  xmlblockevent.h  xmlfeederevent.h  xmlrowpusherevent.h  xmlrowremoverevent.h
libstmm-jointris-xml/scripts/: install_libstmm-jointris-xml.py  uninstall_libstmm-jointris-xml.py
libstmm-jointris-xml/src/: stmm-jointris-xml-config.cc.in  xmlblockevent.cc  xmlfeederevent.cc  xmlrowpusherevent.cc  xmlrowremoverevent.cc
libstmm-jointris-xml/test/: CMakeLists.txt
libstmm-jointris/doc/: CMakeLists.txt
libstmm-jointris/include/stmm-jointris/: blockevent.h  feederevent.h  rowpusherevent.h  rowremoverevent.h  stmm-jointris-config.h
libstmm-jointris/scripts/: install_libstmm-jointris.py  uninstall_libstmm-jointris.py
libstmm-jointris/src/: blockevent.cc  feederevent.cc  rowpusherevent.cc  rowremoverevent.cc  stmm-jointris-config.cc.in
libstmm-jointris/test/: CMakeLists.txt  testBlockEvent.cxx  testRowPusherEvent.cxx  testRowRemoverEvent.cxx
scripts/: arch_create.py  debian_create.py  install_jointris-all.py  sourcepackage.py  testall.py  uninstall_jointris-all.py
scripts/priv/: checktidy.py  dd_install_jointris-all.py  debian_src_versions.cmake  pk_install_jointris-all.py
scripts/priv/arch.orig/: PKGBUILD.in
scripts/priv/debian.orig/: changelog.in  control.in  copyright  jointris.1  jointris.install  jointris.manpages  libstmm-jointris-dev.install  libstmm-jointris-xml-dev.install  libstmm-jointris-xml@STMM_JOINTRIS_XML_MAJOR_VERSION@.install.in  libstmm-jointris-xml@STMM_JOINTRIS_XML_MAJOR_VERSION@.shlibs.in  libstmm-jointris@STMM_JOINTRIS_MAJOR_VERSION@.install.in  libstmm-jointris@STMM_JOINTRIS_MAJOR_VERSION@.shlibs.in  rules
share/cmake/: CommonTesting.cmake
